components/SitePicker/sf.css
:root {
	--border: #bbb;
}

html {
	height: 100vh;
	background-color: rgb(0, 0, 128);
	background: linear-gradient(180deg, rgba(0, 0, 128, 1) 0%, rgba(0, 0, 50, 1) 100%);
}
html.bh {
	background: rgb(139, 0, 0);
	background: linear-gradient(180deg, rgba(139, 0, 0, 1) 0%, rgba(40, 0, 0, 1) 100%);
}
html.hp {
	background: rgb(0, 100, 0);
	background: linear-gradient(180deg, rgba(0, 100, 0, 1) 0%, rgb(0, 30, 0) 100%);
}

/* IMAGES */
.player-select {
	width: 100%;
	height: 100%;
	max-width: 600px;
}

.container {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* CHARACTER WRAPPER */
.character-wrapper {
	display: flex;
	margin: 1em auto;
	flex-wrap: wrap;
	justify-content: center;
	background: var(--border);
	user-select: none;
	max-width: 818px;
}
@media (max-width: 831px) {
	.character-wrapper {
		max-width: 602px;
	}
}
@media (max-width: 600px) {
	.character-wrapper {
		max-width: 300px;
	}
}
@media (max-width: 300px) {
	.character-wrapper {
		max-width: 150px;
	}
}

/* CHARACTERS */
.character {
	cursor: pointer;
	height: 204px;
	width: 204px;
	display: flex;
	justify-content: center;
	align-items: center;
}
.character:not(.disabled, .active):hover {
	border: 2px solid white;
}
@media (max-width: 831px) {
	.character {
		height: 150px;
		width: 150px;
		border: 2px solid var(--border);
	}
}
.character.disabled {
	cursor: default;
}
.character img {
	margin: 0;
	padding: 0;
	filter: grayscale(0.2);
	height: 200px;
}
@media (max-width: 831px) {
	.character img {
		height: 100%;
		width: 100%;
	}
}
.character.active {
	transform: scale(1.15);
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
	z-index: 100;
	border: none;
}
.character.active:after {
	content: '1P';
	position: absolute;
	text-align: center;
	top: -8px;
	left: 36%;
	font-size: 46px;
	color: red;
	font-weight: 700;
	text-shadow: 2px 2px 4px black;
}
.character.active img {
	filter: grayscale(0);
	outline: 4px solid white;
	animation: flash 300ms linear;
}
.character.disabled img {
	filter: grayscale(1);
	pointer-events: none;
}

@keyframes flash {
	0% {
		filter: brightness(100%);
	}
	20% {
		filter: brightness(150%);
	}
	40% {
		filter: brightness(100%);
	}
	60% {
		filter: brightness(150%);
	}
	80% {
		filter: brightness(100%);
	}
	100% {
		filter: brightness(150%);
	}
}

